2010-01-06  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Return an invalid Qt::ImMicroFocus if queried while the view needs to layout.

        https://bugs.webkit.org/show_bug.cgi?id=33204

        * Api/qwebpage.cpp:
        (QWebPage::inputMethodQuery):

Canonical link: https://commits.webkit.org/44315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52903 268f45cc-cd09-0410-ab3c-d52691b4dbfc